Changed picture for OUR STORY

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 // The "Our Story" section
                 aboutTitle: 'Our Story',
                 aboutText: 'Urban Crown was founded by Ridwan "Verizon" Aboderin with a simple mission: to create headwear that combines timeless design with modern comfort. We believe a cap is more than just an accessory; it\'s an extension of your personality. Our commitment to quality materials and craftsmanship ensures that every piece is built to last.',
-                aboutImage: 'https://placehold.co/800x600/b1c4e7/ffffff?text=Our+Story', // Replace this with your own image address.
+                aboutImage: 'images/about-us.avif', // Replace this with your own image address.
 
                 // Your Products
                 // To add a new product, copy a block of text below and paste it.
